GROOVY-12314: MOP: treat a field whose access cannot be established as absent
A non-public field of a strongly encapsulated class (e.g. a JDK class
without --add-opens) can be selected as a meta property but only fails
when read or written: the indy property path escalated the refusal to
GroovyBugError and attribute access leaked a raw IllegalAccessException.
Skip such fields during selection so the normal missing-member handling
applies (MissingPropertyException / MissingFieldException, as in 4.x),
and make the indy selectors degrade to the generic MetaProperty or
adapter path instead of GroovyBugError. Forceable access (open modules,
class-path classes, --add-opens) is unaffected.